--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 }
 
 #quote {
-  font-size: 8pt;
+  font-size: 10pt;
 }
 
 #bg-image {
@@ -15,11 +15,20 @@
 }
 
 #weather-text {
-  font-size: 6pt;
+  font-size: 7pt;
 }
 
 #weather-number {
   font-size: 13pt;
   margin-bottom: 0px;
   padding-top: 5px;
+}
+
+body,
+html {
+  height: 100%;
+}
+
+#quote-row {
+  bottom: 0;
 }
